--- a/frontend/src/component/header2.css
+++ b/frontend/src/component/header2.css
@@ -2,6 +2,7 @@
     background-color: #000;
     height: 15%;
     padding: 4px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
